# Rust_Programming

./: README.md
fundamentals/rust_basics/src/: main.rs
fundamentals/rust_basics/src/datatypes/: data_types.rs
fundamentals/rust_basics/src/variables/: var.rs
projects/calculator/src/: main.rs
projects/console_projects/crud_operation/: Cargo.toml  employee.db
projects/console_projects/snake_game_terminal/: Cargo.toml
projects/rocket_projects/employee_crud_rocket/: Cargo.toml
projects/rocket_projects/rest_employee_crud/: Cargo.toml  build.rs  employees.db
projects/rocket_projects/rest_employee_crud/src/: db.rs  main.rs  model.rs  routes.rs  schema.sql
projects/snake_game_terminal/src/: lib.rs  test_main.rs
projects/wasm_calculator/src/: lib.rs
projects/wasm_projects/SQLITEJS/: sqljs.txt
projects/wasm_projects/employee_crud_wasm/: Cargo.toml
projects/wasm_projects/rest_employee_crud_frontend/: Cargo.toml  Trunk.toml
projects/wasm_projects/rest_employee_crud_frontend/src/: lib.rs  main.rs  request.rs
projects/wasm_projects/rest_employee_crud_frontend/src/components/: employee_form.rs  employee_list.rs  mod.rs
projects/wasm_projects/rest_employee_crud_frontend/static/: index.html  styles.css
projects/wasm_projects/rust-wasm-ui/: Cargo.toml  Trunk.toml  index.html
projects/wasm_projects/user_auth_wasm/: Cargo.toml  index.html
projects/wasm_projects/wasm_calculator/: Cargo.toml
projects/wasm_projects/wasm_snake_game/: Cargo.toml  index.html
projects/wasm_projects/wasm_snake_game/src/: lib.rs
(+32 files in other folders)
