[package]
name = "rest_employee_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
lazy_static = "1.5.0"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json", "macros"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
