[package]
name = "rest_employee_crud_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.77"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
wee_alloc = "0.4.5"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"


[lib]
crate-type = ["cdylib", "rlib"]
