[package]
name = "wasm_snake_game"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
web-sys = { version = "0.3.55", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "KeyboardEvent", "console"] }

[lib]
crate-type = ["cdylib"]